test/param/errors/multipleParamInitErrors.chpl
use IO;

param n = read(int),
      quarterN = n / 4;
